--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,5 +1,5 @@
 {
-  "accentColor": "",
-  "cssTheme": "Obsidian Nord",
-  "baseFontSize": 18
+  "accentColor": "#716f6f",
+  "cssTheme": "Obsidian gruvbox",
+  "baseFontSize": 20
 }
