--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,5 +1,6 @@
 {
   "accentColor": "#716f6f",
-  "cssTheme": "Obsidian gruvbox",
-  "baseFontSize": 20
+  "cssTheme": "Blue Topaz",
+  "baseFontSize": 20,
+  "theme": "obsidian"
 }
