Новые ветки по плюсам

--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,6 +1,6 @@
 {
   "accentColor": "#716f6f",
-  "cssTheme": "Blue Topaz",
+  "cssTheme": "Obsidian gruvbox",
   "baseFontSize": 20,
   "theme": "obsidian"
 }
